syntax = "proto3";

package five_letters.data;

enum Evaluation {
    EVALUATION_ABSENT = 0;
    EVALUATION_PRESENT = 1;
    EVALUATION_CORRECT = 2;
}

message GameState {
    repeated int32 chain = 1 [packed = true];
    repeated Evaluation evaluation = 2 [packed = true];
}
